src/org/api/core/2.0.2/index.md
---
title: "@imqueue/core 2.0.2 · API reference"
---

<!-- Do not edit this file. It is automatically generated by API Documenter. -->

[Home](/api/) &gt; [@imqueue/core](/api/core/2.0.2/)

## core package

## Classes

<table><thead><tr><th>

Class


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[ClusteredRedisQueue](/api/core/2.0.2/core.clusteredredisqueue/)


</td><td>

Class ClusteredRedisQueue Implements the possibility to scale queues horizontally between several redis instances.


</td></tr>
<tr><td>

[IMQ](/api/core/2.0.2/core.imq/)


</td><td>

Message Queue Factory


</td></tr>
<tr><td>

[RedisQueue](/api/core/2.0.2/core.redisqueue/)


</td><td>

Class RedisQueue Implements simple messaging queue over redis.


</td></tr>
<tr><td>

[UDPClusterManager](/api/core/2.0.2/core.udpclustermanager/)


</td><td>

UDP broadcast-based cluster management implementation


</td></tr>
</tbody></table>

## Enumerations

<table><thead><tr><th>

Enumeration


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[IMQMode](/api/core/2.0.2/core.imqmode/)


</td><td>


</td></tr>
<tr><td>

[LogLevel](/api/core/2.0.2/core.loglevel/)


</td><td>


</td></tr>
</tbody></table>

## Functions

<table><thead><tr><th>

Function


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[buildOptions(defaultOptions, givenOptions)](/api/core/2.0.2/core.buildoptions/)


</td><td>

Safely builds full options definition using default options and partial given options

 T


</td></tr>
<tr><td>

[copyEventEmitter(source, target)](/api/core/2.0.2/core.copyeventemitter/)


</td><td>


</td></tr>
<tr><td>

[intrand(min, max)](/api/core/2.0.2/core.intrand/)


</td><td>

Returns random integer between given min and max


</td></tr>
<tr><td>

[logDebugInfo({ debugTime, debugArgs, className, args, methodName, start, logger, logLevel, }, input)](/api/core/2.0.2/core.logdebuginfo/)


</td><td>

Prints debug information


</td></tr>
<tr><td>

[makeRedisSafe(redis)](/api/core/2.0.2/core.makeredissafe/)


</td><td>


</td></tr>
<tr><td>

[pack(data)](/api/core/2.0.2/core.pack/)


</td><td>

Compress given data and returns binary string


</td></tr>
<tr><td>

[profile(options)](/api/core/2.0.2/core.profile/)


</td><td>

Implements '<!-- -->@<!-- -->profile' decorator.


</td></tr>
<tr><td>

[promisify(obj, restrict)](/api/core/2.0.2/core.promisify/)


</td><td>

Makes given object methods promise-like


</td></tr>
<tr><td>

[propertiesOf(obj)](/api/core/2.0.2/core.propertiesof/)


</td><td>

Returns entire list of the given object properties including entire prototype chain


</td></tr>
<tr><td>

[sha1(str)](/api/core/2.0.2/core.sha1/)


</td><td>

Returns SHA1 hash sum of the given string


</td></tr>
<tr><td>

[unpack(data)](/api/core/2.0.2/core.unpack/)


</td><td>

Decompress binary string and returns plain data


</td></tr>
<tr><td>

[uuid()](/api/core/2.0.2/core.uuid/)


</td><td>

Generates and returns Unified Unique Identifier


</td></tr>
<tr><td>

[verifyLogLevel(level)](/api/core/2.0.2/core.verifyloglevel/)


</td><td>

Checks if log level is set to proper value or returns default one


</td></tr>
</tbody></table>

## Interfaces

<table><thead><tr><th>

Interface


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[DebugInfoOptions](/api/core/2.0.2/core.debuginfooptions/)


</td><td>


</td></tr>
<tr><td>

[EventMap](/api/core/2.0.2/core.eventmap/)


</td><td>


</td></tr>
<tr><td>

[ILogger](/api/core/2.0.2/core.ilogger/)


</td><td>

Logger interface


</td></tr>
<tr><td>

[IMessage](/api/core/2.0.2/core.imessage/)


</td><td>

Defines message format.

 {<!-- -->IMessage<!-- -->}


</td></tr>
<tr><td>

[IMessageQueue](/api/core/2.0.2/core.imessagequeue/)


</td><td>

Generic messaging queue implementation interface


</td></tr>
<tr><td>

[IMessageQueueAuthConnection](/api/core/2.0.2/core.imessagequeueauthconnection/)


</td><td>


</td></tr>
<tr><td>

[IMessageQueueConnection](/api/core/2.0.2/core.imessagequeueconnection/)


</td><td>


</td></tr>
<tr><td>

[IMQOptions](/api/core/2.0.2/core.imqoptions/)


</td><td>

Message queue options


</td></tr>
<tr><td>

[IRedisClient](/api/core/2.0.2/core.iredisclient/)


</td><td>

Extends default Redis type to allow dynamic properties access on it

 {<!-- -->IRedisClient<!-- -->}


</td></tr>
<tr><td>

[IServerInput](/api/core/2.0.2/core.iserverinput/)


</td><td>


</td></tr>
<tr><td>

[JsonArray](/api/core/2.0.2/core.jsonarray/)


</td><td>

Represents JSON-serializable array


</td></tr>
<tr><td>

[JsonObject](/api/core/2.0.2/core.jsonobject/)


</td><td>

Represents JSON serializable object


</td></tr>
<tr><td>

[ProfileDecoratorOptions](/api/core/2.0.2/core.profiledecoratoroptions/)


</td><td>


</td></tr>
<tr><td>

[UDPClusterManagerOptions](/api/core/2.0.2/core.udpclustermanageroptions/)


</td><td>


</td></tr>
</tbody></table>

## Variables

<table><thead><tr><th>

Variable


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[DEFAULT\_IMQ\_OPTIONS](/api/core/2.0.2/core.default_imq_options/)


</td><td>


</td></tr>
<tr><td>

[DEFAULT\_UDP\_BROADCAST\_CLUSTER\_MANAGER\_OPTIONS](/api/core/2.0.2/core.default_udp_broadcast_cluster_manager_options/)


</td><td>


</td></tr>
<tr><td>

[IMQ\_LOG\_ARGS](/api/core/2.0.2/core.imq_log_args/)


</td><td>

Environment variable IMQ\_LOG\_ARGS=\[1, 0\] - enables/disables profiled call arguments to be logged

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[IMQ\_LOG\_LEVEL](/api/core/2.0.2/core.imq_log_level/)


</td><td>


</td></tr>
<tr><td>

[IMQ\_LOG\_TIME\_FORMAT](/api/core/2.0.2/core.imq_log_time_format/)


</td><td>

Environment variable IMQ\_LOG\_TIME\_FORMAT=\[ 'microseconds', 'milliseconds', 'seconds' \]. Specifies profiled time logging format, by default is 'microseconds'

 {<!-- -->AllowedTimeFormat \| string<!-- -->}


</td></tr>
<tr><td>

[IMQ\_LOG\_TIME](/api/core/2.0.2/core.imq_log_time/)


</td><td>

Environment variable IMQ\_LOG\_TIME=\[1, 0\] - enables/disables profiled timings logging

 {<!-- -->boolean<!-- -->}


</td></tr>
<tr><td>

[IMQ\_SHUTDOWN\_TIMEOUT](/api/core/2.0.2/core.imq_shutdown_timeout/)


</td><td>


</td></tr>
</tbody></table>

## Type Aliases

<table><thead><tr><th>

Type Alias


</th><th>

Description


</th></tr></thead>
<tbody><tr><td>

[AllowedTimeFormat](/api/core/2.0.2/core.allowedtimeformat/)


</td><td>


</td></tr>
<tr><td>

[AnyJson](/api/core/2.0.2/core.anyjson/)


</td><td>

Represents any JSON-serializable value


</td></tr>
<tr><td>

[IJson](/api/core/2.0.2/core.ijson/)


</td><td>

Alias for JsonObject, legacy, outdated, deprecated, try to avoid using. Stands here for backward-compatibility only


</td></tr>
<tr><td>

[IMessageQueueConstructor](/api/core/2.0.2/core.imessagequeueconstructor/)


</td><td>


</td></tr>
</tbody></table>

